chore-xxx: fixed jsonSchemaTest